read w:charset , not used later though it seems (part of fdo#34814)